fix(editor) Align dropzone on first line not empty
Vertically align dropzone on the right of a not full length widget
for the artifact first element.

--- a/frontend/app/less/drop-row.less
+++ b/frontend/app/less/drop-row.less
@@ -39,6 +39,6 @@
 }
 
 // placeholder special case when there is an empty whiteboard
-#editor > .widget-wrapper > div:first-child > .row-builder > .widget-placeholder{
+#editor > .widget-wrapper > div:first-child > .row-builder > .widget-placeholder:first-child {
   margin-top: 40px;
 }
